后端通用基础代码： 无论在任何后端项目中，都可以复用的代码。"一辈子只用写一次”。 1.自定义异常： 1.1 在exception包下新建错误码枚举类ErrorCode； 1.2 并在exception包下新建一个自定义的业务异常类BusinessException，目的是和内置异常区分开； 1.3 为了更方便根据情况抛异常，封装一个ThrowUtils类，类似于断言类，可以简化抛出异常操作。 2.响应包装类： 2.1 在common包下新建BaseResponse类，统一封装响应结果； 2.2 创建一个ResultUtils类，提供成功调用和失败调用的方法； 3.全局异常处理器GlobalExceptionHandler： 利用AOP切面对全局业务异常和RuntimeException进行捕获； 4.请求包装类： 分页请求包装类PageRequest，可以接受页号、页面大小、排序字段、排序参数等； 删除请求包装类DeleteRequest，接受要删除数据的id作为参数。 5.全局跨域配置： 跨域是指浏览器访问的URL（前端地址）和后端接口地址的域名（或端口号）不一致导致的，浏览器为了安全，默认禁止跨域请求访问。

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.yupi</groupId>
-    <artifactId>backend-init-template</artifactId>
+    <artifactId>yu-picture-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Yu-picture-backend</name>
     <description>Yu-picture-backend</description>
@@ -95,8 +95,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.yupi.backendinittemplate.YuPictureBackendApplication</mainClass>
-                    <skip>true</skip>
+                    <mainClass>com.yupi.yupicturebackend.YuPictureBackendApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
