后端图片管理总结： 1.服务开发部分：定义一个 isAdmin 的类判断是否为管理员；在 PictureService 中定义一个接口：getQueryWrapper 目的是分页查询图片列表；并且把查询单张图片与分页图片都进行 VO 封装； 2.接口开发：先把图片校验这种通用方法抽离出来。接口实现类主要是增删改查的代码，【增】用户上传图片，【删】根据图片 id 删除图片，【改】主要是仅管理员更新图片和所有人都能更新图片，【查】管理员根据 id 获取图片(完全信息) + 普通用户根据 id 获取图片(VO 封装后)；【分页】管理员分页获取图片列表，普通用户只能获取 VO 的分页列表；最后定义一个获取预制标签和分类的接口：作为网站首页的初始标签和分类。

--- a/Yu-picture-backend/src/main/resources/application.yml
+++ b/Yu-picture-backend/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     url: jdbc:mysql://192.168.0.103:3306/yu_picture?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
     username: root
     password: 123456
+    # servlet配置 - 开放更大的文件上传体积
+  servlet:
+    multipart:
+      max-file-size: 10MB
 
 # MyBatis-Plus 配置
 mybatis-plus:
