--- a/Yu-picture-backend/pom.xml
+++ b/Yu-picture-backend/pom.xml
@@ -70,7 +70,12 @@
             <artifactId>mybatis-plus-jsqlparser-4.9</artifactId>
         </dependency>
 
-
+        <!-- 引入腾讯云对象存储的SDK -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version>
+        </dependency>
     </dependencies>
 
     <!-- 依赖管理 -->
