--- a/yu-picture-frontend/package.json
+++ b/yu-picture-frontend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.1",
+    "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.22",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.18.11",
     "@umijs/openapi": "^1.14.1",
     "@vitejs/plugin-vue": "^6.0.1",
