--- a/Yu-picture-backend/pom.xml
+++ b/Yu-picture-backend/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>cos_api</artifactId>
             <version>5.6.227</version>
         </dependency>
+
+        <!-- 引入jsoup库：目的是爬取网上图片 -->
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
     </dependencies>
 
     <!-- 依赖管理 -->
