--- a/yu-picture-frontend/package.json
+++ b/yu-picture-frontend/package.json
@@ -23,6 +23,7 @@
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.22",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.6.3",
     "vue3-colorpicker": "^2.3.0"
   },
