第十期：图库分析功能 1. 需求分析： 整体分为用户空间图库分析和管理员全空间分析两类。 1.无论是个人用户还是管理员，都可以分析以下几种功能：空间资源使用分析 SpaceUsageAnalyzeRequest/Response、空间图片分类分析SpaceCategoryAnalyzeRequest/Response、空间图片标签分析SpaceTagAnalyzeRequest/Response、空间图片大小分析SpaceSizeAnalyzeRequest/Response、用户上传行为分析SpaceUserAnalyzeRequest/Response； 管理员多了一项功能：空间使用排行分析，按照存储量排序，响应为 Space，请求为 SpaceAnalyzeRequest。 2.设计统一的方法fillAnalyzeQueryWrapper，定义三个字段：queryAll、queryPublic 和 spaceId，前两个都是管理员使用，只有前俩都是 false 时，spaceId 起效，个人用户可以分析个人空间。 2.后端开发： 先定义 DTO 类和 VO 类的 Request 与 Response 请求，可以直接定义一个通用请求 SpaceAnalyzeRequest，其余的 Request 均可继承；
1.空间资源使用分析：
Impl 层：如果是全空间/公共图库，需要管理员权限，且更改查询图片表的范围；个人用户直接查单空间数据。
Controller 层：6 个功能的接口层调用方法几乎一样，步骤为：权限校验、获取登录用户 、调用对应的 Impl 层的 getSpacexxxAnalyze、最后返回结果；

2.空间图片分类分析：
Impl 层：使用 MB-Plus 分组查询：
// 先查分类，然后是总数、总图片体积，并按category分组
queryWrapper.select("category AS category", "COUNT(*) AS count", "SUM(picSize) AS totalSize").groupBy("category")
然后查询并转换结果：
return pictureService.getBaseMapper().selectMaps(queryWrapper)
.stream()
.map(result -> {
    // 把每一条数据当成一个result，从中取值；
    // 如果category字段不为空，就转为字符串取出，否则显示未分类
    String category = result.get("category") != null ? result.get("category").toString() : "未分类";

    // 目的是把count和totalSize转为Long类型，但不能直接用(Long)的方式强转
    // 因为 result 是BigDecimal格式，无法转为Long，需要先转为Number后，再用.longValue()方法转为Long类型！
    Long count = ((Number) result.get("category")).longValue();
    Long totalSize = ((Number) result.get("totalSize")).longValue();

    // 最后返回一个含数值的响应
    return new SpaceCategoryAnalyzeResponse(category, count, totalSize);
}).collect(Collectors.toList());

3.空间图片标签分析：
Impl 层：
3.1 主要还是查询所有符合的标签，解析后合并所有标签并统计使用次数
// 查询所有符合条件的标签
queryWrapper.select("tags");
// 并把查询到的标签过滤不存在的后，转为字符串保存为String格式的列表
List<String> tagsJsonList = pictureService.getBaseMapper().selectObjs(queryWrapper)
        .Stream()
        .filter(ObjUtil::isNotNull)
        // 把每一个标签对象转换为String格式
        .map(Object::toString)
        .collect(Collectors.toList());

// 解析后合并所有标签并统计使用次数
Map<String, Long> tagCountMap = tags

--- a/yu-picture-frontend/package.json
+++ b/yu-picture-frontend/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "axios": "^1.13.1",
+    "echarts": "^5.0.1",
+    "echarts-wordcloud": "^2.1.0",
     "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
     "tslib": "^2.8.1",
     "vue": "^3.5.22",
     "vue-cropper": "^1.1.4",
+    "vue-echarts": "^7.0.1",
     "vue-router": "^4.6.3",
     "vue3-colorpicker": "^2.3.0"
   },
