第十一期：团队空间 1.需求分析： 创建团队共享空间，并且可以进行空间成员管理、空间成员权限控制以及空间图片数据管理功能。 2.后端开发： 1. 在 dto 包中加入 SpaceUserAddRequest、SpaceUserEditRequest、SpaceUserQueryRequest； 2. 在 enum 包中加入空间角色枚举类 SpaceRoleEnum：主要包含浏览者、编辑者、管理员功能。 3. 对于空间成员权限控制，在 resource/biz 下新建 JSON 配置文件 spaceUserAuthConfig.json，定义相关的权限（如：成员管理，查看、上传、删除图片，管理员、编辑者等），定义权限配置类 SpaceUserAuthConfig：包含权限列表和角色列表，定义空间成员权限类 SpaceUserPermission：主要是定义权限键、权限名称和权限描述，以及定义空间角色类； 4.定义空间成员权限常量类 SpaceUserPermissionConstant，方便后续校验权限： // 空间用户管理权限 String SPACE_USER_MANAGE = "spaceUser:manage";
// 图片编辑权限
String PICTURE_EDIT = "picture:edit";
5.新建 SpaceUserAuthManager，目的是加载配置文件到对象，并提供根据角色获取权限列表的方法，相当于 Impl 类！
6.引入 Sa-Token 权限认证框架，相比于 Spring Security 等更简单易学。
Sa-Token 可以整合 Redis，将用户的登录态等内容保存在 Redis 中，使用 Jackson 序列化方式引入依赖即可。
6.1 首先定义一个 StpLogic 门面类，管理项目中所有的 StpLogic 账号体系。
6.2 定义一个 StpInterfaceImpl 自定义权限加载接口实现类，主要是返回一个账号所拥有的权限码集合 以及 角色标识集合。
（内容太多，具体的还是看代码和教程吧。。。真写不过来😭）
7.还使用了 Apache ShardingSphere，分库分表功能，主要使用了动态分表功能。

--- a/Yu-picture-backend/pom.xml
+++ b/Yu-picture-backend/pom.xml
@@ -96,6 +96,31 @@
             <version>5.6.227</version>
         </dependency>
 
+        <!-- Sa-Token 权限认证框架，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+        <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+        <!-- 提供Redis连接池 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <!-- 分库分表：引入Apache ShardingSphere -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
         <!-- 引入jsoup库：目的是爬取网上图片 -->
         <dependency>
             <!-- jsoup HTML parser library @ https://jsoup.org/ -->
