这是一个多人协同编辑图片的 WebSocket 系统，使用了 Disruptor 高性能消息队列来处理并发消息，确保多用户同时编辑图片时的性能和数据一致性。 开发流程： 第一步：定义消息模型 model 文件夹 1.PictureEditMessageTypeEnum 消息类型枚举类： 定义 WebSocket 消息的 5 中类型 2.PictureEditActionEnum 编辑操作枚举类： 定义具体的编辑动作 3.PictureEditRequestMessage 请求消息实体： 前端发给后端的请求，主要定义了消息类型和执行的编辑动作： {     "type":"EDIT_ACTION"  // 消息类型     "editAction":"ZOOM_IN"  // 具体操作 } 4.PictureEditResponseMessage 响应消息实体： 后端广播给所有客户端的消息格式，定义了消息类型、执行的编辑动作、信息和用户信息(UserVO)： {     "type":"EDIT_ACTION"  // 消息类型     "message":"用户 %s 执行了 %s 动作"  // 用户执行的动作信息     "editAction":"ZOOM_IN"  // 具体操作     "user":{} } 第二步：配置 WebSocket 1.WebSocketConfig：WebSocket 配置类 作用：启用 WebSocket 并注册端点，要加入注解：@Configuration 配置类、@EnableWebSocket 开启 WebSocket； // 注册WebSocket端点：/ws/picture/edit registry.addHandler(PictureEditHandler, "/ws/picture/edit")         // 添加握手拦截器     	.addInterceptors(wsHandshakeInterceptor)     	// 允许跨域     	.setAllowOrigins("*"); 前端连接方式：ws://localhost:8123/api/ws/picture/edit?pictureId=123 第三步：握手拦截器（权限校验） 1.WsHandshakeInterceptor 握手拦截器 作用：在建立 WebSocket 连接前进行权限校验 检验流程： 1. 检查 pictureId 参数是否存在 2. 检查用户是否登录 3. 检查图片是否存在 4. 检查图片所在空间是否为团队空间 5. 检查用户是否有编辑权限（PICTURE_EDIT） 6. 校验通过后，将 user、userId、pictureId 存入 WebSocket Session 第四步：Disruptor 高性能消息队列 1.PictureEditEvent - 事件实体 作用：定义放入 Disruptor 环形队列的事件对象 {   pictureEditRequestMessage,  // 请求消息   session,                    // WebSocket 会话   user,                       // 当前用户   pictureId                   // 图片 ID } 2.PictureEditEventDisruptorConfig - Disruptor 配置 作用：创建并启动 Disruptor 环形队形 为什么用 Disruptor？ 1. 高性能：比 BlockingQueue 快 10 倍以上 2. 无锁设计：避免线程竞争 3. 适合高并发场景：多用户同时编辑图片 int bufferSize = 1024 * 256;  // 环形队列大小：256K
// 创建 Disruptor
Disruptor<PictureEditEvent> disruptor = new Disruptor<>(
    PictureEditEvent::new,     // 事件工厂
    bufferSize,                // 缓冲区大小
    // 自定义线程工厂
    ThreadFactoryBuilder.create()
                        .setNamePrefix("pictureEditEventDisruptor")
                        .build()
);

// 绑定消费者（WorkHandler）
disruptor.handleEventsWithWorkerPool(pictur

--- a/Yu-picture-backend/pom.xml
+++ b/Yu-picture-backend/pom.xml
@@ -121,6 +121,20 @@
             <version>5.2.0</version>
         </dependency>
 
+        <!-- 引入原生的WebSocket协议依赖 -->
+        <!-- websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <!-- 高性能无锁队列 Disruptor -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+
         <!-- 引入jsoup库：目的是爬取网上图片 -->
         <dependency>
             <!-- jsoup HTML parser library @ https://jsoup.org/ -->
@@ -128,6 +142,7 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.3</version>
         </dependency>
+
     </dependencies>
 
     <!-- 依赖管理 -->
